Calendar: Fix tag text not readable

--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -579,7 +579,6 @@ dialog::backdrop {
   max-width: var(--tags-max-width, 18rem);
   flex-wrap: wrap;
   padding: 0;
-  color: var(--black-text);
   font-size: var(--fonts-xxs);
   font-weight: var(--semi-bold);
   gap: var(--s-1);
@@ -590,6 +589,10 @@ dialog::backdrop {
   display: flex;
   border-radius: var(--rounded);
   padding-inline: var(--s-1-5);
+}
+
+.calendar__event__tag {
+  color: var(--black-text);
 }
 
 .calendar__event__badge-tag {
